; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_adm6996.c_adm6996_read_mii_reg.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_adm6996.c_adm6996_read_mii_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adm6996_priv = type { %struct.phy_device* }
%struct.phy_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.mii_bus* }
%struct.mii_bus = type { i32 (%struct.mii_bus*, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.adm6996_priv*, i32)* @adm6996_read_mii_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @adm6996_read_mii_reg(%struct.adm6996_priv* %0, i32 %1) #0 {
  %3 = alloca %struct.adm6996_priv*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.phy_device*, align 8
  %6 = alloca %struct.mii_bus*, align 8
  store %struct.adm6996_priv* %0, %struct.adm6996_priv** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.adm6996_priv*, %struct.adm6996_priv** %3, align 8
  %8 = getelementptr inbounds %struct.adm6996_priv, %struct.adm6996_priv* %7, i32 0, i32 0
  %9 = load %struct.phy_device*, %struct.phy_device** %8, align 8
  store %struct.phy_device* %9, %struct.phy_device** %5, align 8
  %10 = load %struct.phy_device*, %struct.phy_device** %5, align 8
  %11 = getelementptr inbounds %struct.phy_device, %struct.phy_device* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load %struct.mii_bus*, %struct.mii_bus** %12, align 8
  store %struct.mii_bus* %13, %struct.mii_bus** %6, align 8
  %14 = load %struct.mii_bus*, %struct.mii_bus** %6, align 8
  %15 = getelementptr inbounds %struct.mii_bus, %struct.mii_bus* %14, i32 0, i32 0
  %16 = load i32 (%struct.mii_bus*, i32)*, i32 (%struct.mii_bus*, i32)** %15, align 8
  %17 = load %struct.mii_bus*, %struct.mii_bus** %6, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @PHYADDR(i32 %18)
  %20 = call i32 %16(%struct.mii_bus* %17, i32 %19)
  ret i32 %20
}

declare dso_local i32 @PHYADDR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
